# frettipy

./: LICENSE  README.md  frettipy  frettipy.py  prettipy  prettipy_all  pyproject.toml  setup.cfg
test/: after.py  before.py  test.py
