[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "frettipy"
version = "0.2"
authors = [{name = "Jan Berges"}]
description = "No fretting about pretty Python"
readme = "README.md"
urls = {Homepage = "https://github.com/janberges/frettipy"}
classifiers = [
    "License :: OSI Approved :: Zero-Clause BSD (0BSD)",
    "Programming Language :: Python",
]
requires-python = ">=2.7"
scripts = {frettipy = "frettipy:main"}

[tool.setuptools]
py-modules = ['frettipy']
