[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "frettipy"
dynamic = ["version"]
authors = [{name = "Jan Berges"}]
description = "No fretting about pretty Python"
readme = "README.md"
license = {file = "LICENSE"}
urls = {Homepage = "https://github.com/janberges/frettipy"}
classifiers = [
    "License :: OSI Approved :: Zero-Clause BSD (0BSD)",
    "Programming Language :: Python",
]
requires-python = ">=2.7"
scripts = {frettipy = "frettipy:main"}
