[metadata]
name = prettipy
version = 0.1
author = Jan Berges
author_email =
description = Format Python source code in place
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/janberges/prettipy
classifiers =
    Programming Language :: Python
    License :: Freely Distributable
    Operating System :: POSIX :: Linux

[options]
python_requires = >=2.7
scripts =
    prettipy
    prettipy_all
