[metadata]
name = frettipy
version = 0.2
author = Jan Berges
author_email =
description = No fretting about pretty Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/janberges/frettipy
classifiers =
    Programming Language :: Python
    License :: Freely Distributable
    Operating System :: POSIX :: Linux

[options]
python_requires = >=2.7
scripts =
    frettipy
